# clothSimulation

./: .gitignore  CMakeLists.txt  main.cpp
headers/: billSetOfPointsWithCollisions.h  collisionObject.h  oscillator.h  triangle.h
src/: billSetOfPointsWithCollisions.cpp  collisionObject.cpp  oscillator.cpp  triangle.cpp
